# transcript-privacy-filter

./: .gitignore  README.md  pyproject.toml  streamlit_app.py
opf_app/: __init__.py  batch.py  config.py  documents.py  filenames.py  masking.py  models.py  ocs_csv.py  outputs.py  prompts.py  redaction.py  responses_client.py  sentences.py  ui.py  v2_batch.py  v2_redaction.py
tests/: fixtures.py  test_app_foundation.py  test_batch.py  test_document_parser.py  test_e2e_workflows.py  test_models_and_filenames.py  test_ocs_csv_parser.py  test_output_generation.py  test_redaction_service.py  test_redaction_ui.py  test_review_ui.py  test_v2_batch.py  test_v2_config.py  test_v2_e2e_workflows.py  test_v2_preserved_value_masking.py  test_v2_progress.py  test_v2_redaction_service.py  test_v2_release_regression.py  test_v2_responses_api_client.py  test_v2_sentences.py
