[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opf"
version = "0.1.0"
description = "Standalone local-only OPF PyTorch model and eval tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "huggingface_hub",
  "numpy",
  "openai",
  "packaging",
  "pypdf",
  "python-docx",
  "torch",
  "safetensors",
  "streamlit",
  "tiktoken",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
opf = "opf.__main__:main"

[tool.setuptools.packages.find]
include = ["opf*", "opf_app*"]
