[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opf"
version = "0.1.0"
description = "Local transcript redaction app using the OpenAI Responses API."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "pypdf",
  "python-docx",
  "streamlit",
]

[project.optional-dependencies]
legacy-opf = [
  "huggingface_hub",
  "numpy",
  "packaging",
  "safetensors",
  "tiktoken",
  "torch",
]
test = [
  "pytest",
]

[project.scripts]
opf = "opf.__main__:main"

[tool.setuptools.packages.find]
include = ["opf*", "opf_app*"]
